connectrpc-axum/tests/ui/semantic_handler_invalid_server_stream.stderr
error[E0631]: type mismatch in function arguments
  --> tests/ui/semantic_handler_invalid_server_stream.rs:57:62
   |
50 | / async fn say_hello_stream(
51 | |     ConnectRequest(_req): ConnectRequest<HelloResponse>,
52 | | ) -> Result<ConnectResponse<StreamBody<ResponseStream>>, ConnectError> {
   | |______________________________________________________________________- found signature defined here
...
57 |       let _ = HelloWorldServiceBuilder::new().say_hello_stream(say_hello_stream);
   |                                               ---------------- ^^^^^^^^^^^^^^^^ expected due to this
   |                                               |
   |                                               required by a bound introduced by this call
   |
   = note: expected function signature `fn(connectrpc_axum::ConnectRequest<HelloRequest>) -> _`
              found function signature `fn(connectrpc_axum::ConnectRequest<HelloResponse>) -> _`
   = note: required for `ConnectHandlerWrapper<fn(connectrpc_axum::ConnectRequest<HelloResponse>) -> impl futures::Future<Output = Result<connectrpc_axum::ConnectResponse<connectrpc_axum::StreamBody<futures::stream::Empty<Result<HelloResponse, connectrpc_axum::ConnectError>>>>, connectrpc_axum::ConnectError>> {say_hello_stream}>` to implement `Handler<(connectrpc_axum::ConnectRequest<HelloRequest>, connectrpc_axum::StreamBody<_>), ()>`
note: required by a bound in `HelloWorldServiceBuilder::<S>::say_hello_stream`
  --> tests/ui/semantic_handler_invalid_server_stream.rs:42:13
   |
39 |     fn say_hello_stream<F, T>(self, _handler: F) -> Self
   |        ---------------- required by a bound in this associated function
...
42 |             Handler<T, S> + ServerStreamConnectHandler<T, HelloRequest, HelloResponse, S>,
   |             ^^^^^^^^^^^^^ required by this bound in `HelloWorldServiceBuilder::<S>::say_hello_stream`
help: consider wrapping the function in a closure
   |
57 |     let _ = HelloWorldServiceBuilder::new().say_hello_stream(|arg0: connectrpc_axum::ConnectRequest<HelloRequest>| say_hello_stream(/* connectrpc_axum::ConnectRequest<HelloResponse> */));
   |                                                              +++++++++++++++++++++++++++++++++++++++++++++++++++++                 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
